lib/nails_derive/tests/ui/from-request-missing-path-names.stderr
error: Missing field for binding name from {id}
 --> $DIR/from-request-missing-path-names.rs:4:16
  |
4 | #[nails(path = "/api/posts/{id}")]
  |                ^^^^^^^^^^^^^^^^^

error: could not compile `nails_derive-tests`.
