lib/nails_derive/tests/ui/from-request-missing-path-names.rs
use nails_derive::FromRequest;

#[derive(FromRequest)]
#[nails(path = "/api/posts/{id}")]
pub struct GetPostRequest;

fn main() {}
